# Dessert

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  setup.py
experiments/: cleanup_gt.py  consolidate.py  embed_queries.py  glove_synthetic.py  graph_synthetic.py  landmarks.py  ms_marco_eval.py  msmarco.py  msmarco_centroids.py  msmarco_colbert.py  msmarco_v2.py  scann_test.py
python_bindings/: DessertPython.cc
python_tests/: doc_retrieval_helpers.py  test_doc_retrieval.py
src/: DocSearch.h  EigenDenseWrapper.h  MaxFlash.cc  MaxFlash.h  MaxFlashArray.cc  MaxFlashArray.h  SRP.cc  SRP.h  TinyTable.h  Utils.h
